# oop_2025_labs

lr1/: CMakeLists.txt  main.cpp
lr1/includes/: function.hpp
lr1/test/: test.cpp
lr1var4/: function.cpp  function.hpp
